--- a/README
+++ b/README
@@ -3,3 +3,16 @@ Support Version
 
 Sparrow Version 1.0.1 (589.15)
 
+Download
+-------------------------
+latest compiled version [here](https://github.com/downloads/SKAhack/SparrowEmojiPlugin/SparrowEmojiPlugin-0.1.0.zip).
+
+Instructions
+-------------------------
+1. SIMBL install [here](http://www.culater.net/software/SIMBL/SIMBL.php).
+2. Put SparrowEmojiPlugin.bundle into ~/Library/Application Support/SIMBL/Plugins/
+
+ToDo
+-------------------------
+au Emoji support
+softbank(iPhone) Emoji support
